--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,5 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-sourceCompatibility = JavaVersion.VERSION_17_PREVIEW
-targetCompatibility = JavaVersion.VERSION_17_PREVIEW
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
